--- a/addBooks.html
+++ b/addBooks.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Siden til at tilføje bøger til boglisten</title>
-      <!-- <link rel="stylesheet" href="books.css"/> -->
+      <script src="app.js"></script>
     </head>
     <body>
         <h1>Books</h1>
@@ -50,8 +50,14 @@
                         <p>
                             <br/><input type="submit" value="Send"/>
                         </p>
+
                     </div>
                 </form>
+                
+                <button id="tilfoj">Tilføj Destination</button>
+
+                <input class="list-input" type="text">
+                
             </div>
           </article>
           <article id="display">
